--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.0",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/db": "^0.10.6",
+    "@astrojs/vercel": "^7.5.4",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "astro": "^4.7.0",
     "typescript": "^5.4.5"
   }
 }
