--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "lucia-astrodb",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/db": "^0.10.6",
-    "@astrojs/vercel": "^7.5.4",
-    "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "astro": "^4.7.0",
-    "typescript": "^5.4.5"
+    "@astrojs/check": "^0.5.9",
+    "@astrojs/db": "^0.9.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.4.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.5",
+    "arctic": "^1.2.1",
+    "astro": "^4.5.8",
+    "lucia": "^3.1.1",
+    "oslo": "^1.1.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
